* Removed options to Cut, Remove and Rename from context menu on mounted
    drive on the desktop, user might accidentally recursively remove its
    contents.


Changes on 1.2.4 since 1.2.3:

* Workarounded a bug in gtk_file_chooser_set_file() function (patch from
    Simon Long).

* Fixed single instance options cleanup that might affect next call.

* Fixed wrong update of status text after folder update when there are
    selected files in the folder.

* Disabled using desktop background from the GTK+ style since there is
    own color setting and changing the style may repaint the desktop.

* Enforced desktop font update on the desktop resize with GTK+ 3.0.

* Fixed items layout order to never be tried before desktop is realized.

* Fixed item borders calculations when matching to pointer position.

* Fixed forwarding events to root window, it could get unpaired events.

* Fixed crash on too fast folder change with focus_previous=1.

* Fixed stuck tooltip after click on the item.

* Improved option to open folder in terminal, it should work with gvfs
    paths that have resolvable local path as well.

* Fixed incorrect file names rendering position on the desktop.

* Fixed not working Connect to Server... dialog when non-anonymous user
    is selected.

* Fixed possible memory corruption in the Connect to Server... dialog.

* Support explicit mention of scheme in the Server line of the Connect to
    Server... dialog, not duplicate it if it's present. That includes the
    https:// to fix support for secure WebDAV access as well.


Changes on 1.2.3 since 1.2.2:

* Disabled unrequested config save on changing dir if show_hidden changes.

* Replaced deprecated atk_component_get_position() calls.

* Fixed invalid callback get_image_position() on ATK icon, it could loop
    and therefore hang the application.

* Increased delay on restoring scroller position from 20 to 50 ms.


Changes on 1.2.2 since 1.2.1:

* Fixed Ctrl+- and Ctrl+= key combinations for zooming.
