@@ -2,6 +2,9 @@
     drive on the desktop, user might accidentally recursively remove its
     contents.
 
+* Removed 'Open in terminal' from context menu on folder on the desktop
+    that cannot be opened in terminal.
+
 
 Changes on 1.2.4 since 1.2.3:
 
